--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
 <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+    <header>
+        header content
+    </header>
+    <main>
+        <section>
+            Task form content
+        </section>
+        <section>
+            Task list content
+        </section>
+    </main>
+    <footer>
+Footer content
+    </footer>
 
 <script type="module" src="./js/main.js"></script>
 </body>
