--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.css">
+    
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -15,12 +16,35 @@
 <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <header>
-        header content
+    <header class="main-header">
+        <img class="logo" src="./img/TODO.logo.png" alt="logo">
+        <div class="stats">
+            <div class="detail" >
+                <span class="label" >Viso: </span>
+                <span class="value" >0</span>
+            </div>
+            <div class="detail" >
+                <span class="label" >Todo: </span>
+                <span class="value" >0</span>
+            </div>
+            <div class="detail" >
+                <span class="label" >In-progress: </span>
+                <span class="value" >0</span>
+            </div>
+            <div class="detail" >
+                <span class="label" >Done: </span>
+                <span class="value" >0</span>
+            </div>
+            <div class="detail" >
+                <span class="label" >Deleted: </span>
+                <span class="value" >0</span>
+            </div>
+
+        </div>
     </header>
     <main>
         <section>
-            Task form content
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni similique doloribus dignissimos nihil, ipsum, harum cumque placeat molestias fuga ex sit repellendus impedit deserunt. Odio vel consectetur inventore illo, possimus laudantium rem dignissimos dolore quia vero id voluptatem praesentium cum? Omnis illo veniam quod iure consectetur rerum repellendus, nihil explicabo eius, nobis ut nesciunt ex autem quis facere itaque, laboriosam amet vitae praesentium? Accusantium rem excepturi velit, aperiam laborum quo maxime vel explicabo dolore minus dignissimos ducimus pariatur rerum quae. Sunt harum velit, aliquam, fuga in tempora praesentium illo nulla consequuntur animi consectetur? Quae perspiciatis, doloremque, autem cumque sequi esse impedit quaerat officia molestias, soluta nam dolorem ipsum incidunt explicabo earum odio fuga delectus tempore! Sint fugit et totam ea provident delectus corporis tempora id, quae culpa. Autem quidem ullam voluptates, officia optio totam dignissimos officiis facere omnis necessitatibus libero, sequi dolorem! Quod, culpa laudantium laborum, ea voluptas inventore porro nostrum blanditiis excepturi quam ut officiis doloremque quibusdam error facilis a quaerat magni rerum sapiente officia, deleniti tenetur? Ab blanditiis, voluptate rem consequatur quas doloremque veniam officiis nam soluta in unde quam repellendus nihil animi provident quod dolor deleniti sit quo vitae ut assumenda sequi ea. Sapiente vitae magni enim est tempora. Saepe similique itaque voluptatum ipsam provident veniam ducimus aut id nemo ullam, eveniet porro laboriosam perspiciatis enim optio quidem dicta deserunt quibusdam dolore est deleniti non at! Cupiditate sint, illo voluptatum explicabo vel fugit, porro natus ipsa id ea similique assumenda sed ab! Non nulla saepe explicabo ipsum sequi nihil soluta, eligendi debitis animi et fuga corrupti illo alias ea praesentium officiis, incidunt fugiat nemo! Dolorum, aut ad cumque laborum reiciendis ullam autem placeat et, sequi ipsum quibusdam libero, voluptas qui? Explicabo dolore rerum sequi modi. Maiores officiis debitis provident similique, tenetur optio ipsum a illo est placeat quo voluptates dicta amet! Explicabo non tempore architecto quasi, rerum earum nihil repellendus quibusdam quaerat quo deserunt voluptates, illum iure saepe! Quod fugit repudiandae ad molestiae aut? Eveniet eius soluta voluptatem sequi tempore aliquam corporis, iusto sit atque cumque! Earum, corporis iure aut culpa, laboriosam, maiores accusamus suscipit repellendus voluptatibus voluptates dolore repellat odio sapiente dolores labore commodi modi beatae voluptas aliquid nam? Hic architecto sint expedita itaque qui harum eligendi ad magnam eius consequatur, consectetur vero corrupti a earum magni ut nam? Autem beatae cupiditate, quam, fuga repellat exercitationem necessitatibus, libero suscipit tenetur dicta perspiciatis obcaecati laborum sit facere assumenda eveniet. Odio numquam et, a doloribus nostrum officiis accusamus natus nam tempora. Eaque cumque nihil hic in doloremque nisi explicabo vel repellat consectetur, a placeat quidem quos illo fuga, dolores quam voluptatem laudantium reiciendis dolorum voluptas voluptatum soluta ratione? Enim, numquam officia voluptatibus minus odit, odio nemo porro iste facilis distinctio quaerat doloremque reprehenderit quod doloribus officiis assumenda alias. Maiores inventore quaerat molestias, maxime debitis laudantium repellat asperiores eveniet eos reiciendis, qui provident dolor exercitationem commodi atque, hic pariatur. Eligendi dolor inventore cupiditate doloremque, dolorem fugit quisquam perferendis voluptatum est animi, laudantium laboriosam explicabo nemo itaque aspernatur vel incidunt asperiores tempore praesentium! Ipsa maxime, deserunt, esse fugit nisi, culpa voluptas quisquam harum assumenda numquam magni voluptatibus aperiam quaerat recusandae sunt. Vitae sunt quos repellat eos autem esse necessitatibus recusandae. Iusto eos minus esse perferendis at quibusdam cupiditate, quis voluptas ab nesciunt quod ad eaque culpa quas itaque beatae id cumque! Eius provident officia necessitatibus expedita, amet sit atque magnam consectetur? Ipsum eius vel molestiae dicta necessitatibus ducimus nesciunt nostrum sapiente fugit nobis nemo, delectus eum ea! Dolore provident ullam, sequi nulla nisi officia iusto voluptate voluptatibus repellat ipsa quia, doloribus necessitatibus. Possimus quisquam ipsa ullam, veritatis error iste omnis praesentium ratione ad, sunt officia deserunt inventore aspernatur sequi eum cum. Nesciunt, rerum provident? Eius officiis velit ex sit, provident praesentium. Voluptates quis esse nostrum in obcaecati modi sint fuga excepturi assumenda temporibus iste non ducimus, perspiciatis facere accusantium pariatur repudiandae sequi. Quia ex itaque doloribus vel vero repellat voluptatem quam minima dolor, voluptas debitis veniam aliquam neque cumque explicabo. Dolor, perferendis quis pariatur dolore rerum facere repellendus, nulla esse magni ab doloribus aliquid doloremque optio, sequi deleniti mollitia obcaecati! Architecto fuga explicabo culpa esse dolores rerum provident et eum recusandae dolorem obcaecati iusto qui corrupti, dicta quis, sequi totam sapiente! Tempora libero, laborum adipisci eos, repellat a quae error excepturi obcaecati officia ipsum voluptatum incidunt unde tempore corporis! Itaque ea illo quis cupiditate! Et accusantium quos sed. Harum voluptate dolor laborum iure exercitationem dolore consequuntur ab ex odit at excepturi, quas quae ratione. Corporis consectetur distinctio eligendi laboriosam, culpa nesciunt non minima beatae aut deserunt quaerat illo temporibus recusandae rem quae dignissimos! Molestiae ex dolore quos reiciendis a distinctio quibusdam consequuntur. Pariatur facere, excepturi quia et recusandae, odio illum ipsum rerum ad delectus repellendus asperiores ratione ab dicta dolor neque commodi necessitatibus quam, ipsam labore iusto! Debitis, vitae voluptas fugit at exercitationem quasi esse nemo, ex et magnam consectetur ipsum porro impedit maiores sed, sequi voluptates veniam! Ad eveniet mollitia nostrum provident quia atque omnis beatae culpa perspiciatis possimus vel consequuntur hic reiciendis quae nihil velit assumenda, sit esse ex illo, eligendi explicabo distinctio! Ipsam voluptatibus molestiae consectetur atque totam, doloremque eligendi aspernatur. Adipisci non, itaque architecto modi maxime esse? Magni rem consequuntur ut, nam laboriosam error, cupiditate nostrum expedita blanditiis officiis veniam fugiat libero voluptatum molestias ipsum et ratione sint eveniet vero beatae quo itaque ea. Rem voluptas sapiente ipsam recusandae nesciunt aliquid perspiciatis fugiat, corporis reiciendis harum illo sit necessitatibus. Magnam repellendus deleniti nihil repellat, autem quibusdam vitae dolorum tenetur totam dicta ex blanditiis molestiae tempore quo molestias itaque temporibus culpa similique in eaque! Eos eveniet modi ipsa asperiores exercitationem ad fuga molestias quis quod doloribus consequatur architecto, aspernatur nam tempore quasi cum atque esse. Autem quisquam dicta deleniti esse voluptatum, vero natus ut culpa placeat porro molestiae fugit ullam suscipit laudantium explicabo at molestias commodi exercitationem veniam. Saepe magni voluptatibus ratione quibusdam odio et, repellat hic minima molestias illo modi ad voluptatem esse dignissimos reiciendis, dolores, ducimus ipsa! Ipsum ratione ut vel repellendus nisi consequatur dolores.</p>
         </section>
         <section>
             Task list content
