--- a/index.html
+++ b/index.html
@@ -42,14 +42,150 @@
 
         </div>
     </header>
-    <main>
-        <section>
-            Task form content
-        </section>
-        <section>
-            Task list content
+    
+    <main class="main-content">
+        <h1 class="main-title">Darbų planavimo platforma</h1>
+        <div class="lightbox" data-visible="false">
+            <div class="background"></div>
+            <form class="form-create">
+                <fieldset class="form-row">
+                    <label class="label" for="task">Task</label>
+                    <input class="input" id="task" type="text" required>
+                </fieldset>
+                <div class="columns">
+                    <fieldset class="form-row">
+                        <label class="label" for="deadline">Deadline</label>
+                        <input class="input" id="deadline" type="date" value="2024-09-03" min="2024-09-03" max="2025-09-03" required>
+                    </fieldset>
+                    <fieldset class="form-row">
+                        <label class="label" for="color">Color</label>
+                        <input class="input" id="color" type="color" required>
+                    </fieldset>
+                </div>
+                <fieldset class="form-row columns">
+                    <button class="btn" type="reset">Reset</button>
+                    <button class="btn" type="submit">Create</button>
+                </fieldset>
+                <div class="close">x</div>
+            </form>
+        </div>
+        <section class="task-content">
+            <div class="column">
+                <h2 class="title">Todo</h2>
+                <ul class="list">
+                    <li class="task">
+                        <div class="header">
+                            <div class="more">...</div>
+                            <div class="more-actions" data-visible="false">
+                                <button type="button">Move up</button>
+                                <button type="button">Move down</button>
+                                <hr>
+                                <button type="button">In progress</button>
+                                <button type="button">Done</button>
+                                <hr>
+                                <button type="button">Delete</button>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <p>Uzduoties tekstas</p>
+                        </div>
+                        <div class="footer">
+                            <p>Deadline: 2024-09-04</p>
+                        </div>
+                    </li>
+                    <li class="task">
+                        <div class="header">
+                            <div class="more">...</div>
+                            <div class="more-actions" data-visible="false">
+                                <button type="button">Move up</button>
+                                <button type="button">Move down</button>
+                                <hr>
+                                <button type="button">In progress</button>
+                                <button type="button">Done</button>
+                                <hr>
+                                <button type="button">Delete</button>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <p>Uzduoties tekstas</p>
+                        </div>
+                        <div class="footer">
+                            <p>Deadline: 2024-09-04</p>
+                        </div>
+                    </li>
+                    <li class="task">
+                        <div class="header">
+                            <div class="more">...</div>
+                            <div class="more-actions" data-visible="false">
+                                <button type="button">Move up</button>
+                                <button type="button">Move down</button>
+                                <hr>
+                                <button type="button">In progress</button>
+                                <button type="button">Done</button>
+                                <hr>
+                                <button type="button">Delete</button>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <p>Uzduoties tekstas: blocked</p>
+                        </div>
+                        <div class="footer">
+                            <p>Deadline: 2024-09-04</p>
+                        </div>
+                    </li>
+                    <li class="task">
+                        <div class="header">
+                            <div class="more">...</div>
+                            <div class="more-actions" data-visible="false">
+                                <button type="button">Move up</button>
+                                <button type="button">Move down</button>
+                                <hr>
+                                <button type="button">In progress</button>
+                                <button type="button">Done</button>
+                                <hr>
+                                <button type="button">Delete</button>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <p>Uzduoties tekstas</p>
+                        </div>
+                        <div class="footer">
+                            <p>Deadline: 2024-09-04</p>
+                        </div>
+                    </li>
+                    <li class="task">
+                        <div class="header">
+                            <div class="more">...</div>
+                            <div class="more-actions" data-visible="false">
+                                <button type="button">Move up</button>
+                                <button type="button">Move down</button>
+                                <hr>
+                                <button type="button">In progress</button>
+                                <button type="button">Done</button>
+                                <hr>
+                                <button type="button">Delete</button>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <p>Uzduoties tekstas</p>
+                        </div>
+                        <div class="footer">
+                            <p>Deadline: 2024-09-04</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="column">
+                <h2 class="title">In progress</h2>
+                <ul class="list">LIST...</ul>
+            </div>
+            <div class="column">
+                <h2 class="title">Done</h2>
+                <ul class="list">LIST...</ul>
+            </div>
         </section>
     </main>
+
     <footer class="main-footer" >
             Cipyright &copy;
     </footer>
